# CosmicRaysGSSI

./: CMakeLists.txt  README.md
apps/: main.cpp  sandbox.cpp
hmfFrom21cmFast/: Makefile  hmf_allz.txt  hmf_z10.txt  main.c  main_Mmin.c  main_integral.c
hmfFrom21cmFast/Cosmo_c_files/: ps.c
hmfFrom21cmFast/Parameter_files/: COSMOLOGY.H  INIT_PARAMS.H
include/: SFR.h  anal_params.h  constants.h  cosmo_progs.h  cosmology_params.h  heat_params.h  misc.h  ps.h  reionization.h  tridiag.h  utilities.h
plots/: ccrh.mplstyle  plot_21cm.py  plot_IGM.py  plot_SFR.py  plot_distance.py  plot_evolution.py  plot_losses_timescale.py  plot_rates.py  plot_source_function.py  plot_spectrum.py  plot_tbohm.py  plot_timescales.py
src/: SFR.cpp  cosmo_progs.cpp  dump.cpp  misc.cpp  ps.cpp  reionization.cpp  tridiag.cpp  utilities.cpp
